syntax = "proto3";
//生成文件所在包名
option java_package = "com.jwjjgs.robotcenter.pojo.protoFile";
//生成的java文件名
option java_outer_classname = "Package";

message ConnectSuc {
  int32 ok = 1;
}

message Request {
  string proto_name = 1;//proto name
  bytes  data       = 2;//content
}

message Response {
  string proto_name = 1;
  bytes  data       = 2;
}

//-----------------grpc----------------------
service LoginService {
  rpc searchUser (userSearch) returns (userReply){}
}

message userReply {
  int32 userid    = 1;
  string username = 2;
}

message userSearch {
  int32 userid = 1;
}